# askvai

./: .env.example  Dockerfile  README.md  app.py  data.json  docker-compose.yml  global_constants.py  gunicorn.conf.py  log.csv  models.py  pyproject.toml  requirements.txt  startup.txt  test.py
.github/workflows/: main_askviridiumai.yml
ask_viridium_ai/: ask_viridium_ai.py  constants.py  data.json  data2.json  data3.json  data4.json  experiment.py  experiment_multithreaded.py  findchemicals_prompt.txt  first_half_experiment_logs.csv  log.csv  new_prompt.txt  newprompt.txt  routes.py  second_half_experiment_logs.csv  tracking.py
ask_viridium_ai/previous_data/: second_half_experiment_logs.csv
ask_viridium_ai/system_prompt_templates/: findchemicals_prompt.txt  newprompt2.txt  original_prompt.txt
data_dump/: data.json
experiment/: experiment_multithreaded.py
experiment/.ipynb_checkpoints/: confidence_score_analysis-checkpoint.ipynb
static/css/: styles.css
static/scripts/: index.js
templates/: index.html
utils/: askVAI_experiment.xlsx  exceptions.py  filtered_file.xlsx  manual_entries_script.py  tavily.py  threading_tools.py
