[tool.poetry]
name = "askviridium"
version = "0.1.0"
description = "Ask Viridium Service"
authors = ["yasho-bapat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
flask-swagger-ui = "4.11.1"
gunicorn = "22.0.0"
flask-cors = "4.0.1"
python-dotenv = "0.21.1"
langchain = "^0.2.3"
langchain-community = "^0.2.4"
langchain-openai = "^0.1.8"
apispec = "6.6.1"
apispec-webframeworks = "1.1.0"
marshmallow = "3.21.2"
werkzeug = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
